objects/Mulesoft_Application__c.object
<CustomObject>
    <fields>
        <fullName>Application_Name__c</fullName>
        <label>Application Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Environment__c</fullName>
        <defaultValue>&quot;SO&quot;</defaultValue>
        <label>Current Environment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_URL__c</fullName>
        <label>Job URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Story_Id__c</fullName>
        <formula>CASESAFEID(User_Story_Task__r.copado__User_Story__r.Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User Story Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Story_Task__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User Story Task</label>
        <referenceTo>copado__User_Story_Task__c</referenceTo>
        <relationshipLabel>Mulesoft Applications</relationshipLabel>
        <relationshipName>Mulesoft_Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Version__c</fullName>
        <label>Version</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Mulesoft Application</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>MA-{0000}</displayFormat>
        <label>Mulesoft Application Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Mulesoft Applications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>